overflow bug maybe fixed?

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,7 @@ a {
 
 @media (max-width: 960px) {
   main {
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     padding: 0 1rem;
   }
 }
